<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PoliticsMainActivity"
    tools:showIn="@layout/politics_app_bar_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/politicsTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/editTextColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/politicsTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics_text1"
            android:textColor="@color/editTextColor"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/politicsTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/politics_text2"
            android:textAllCaps="true"
            android:textColor="@color/editTextColor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/politicsTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics_text3"
            android:textColor="@color/editTextColor"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/politicsTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/politics_text4"
            android:textAllCaps="true"
            android:textColor="@color/editTextColor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/politicsTextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics_text5"
            android:textColor="@color/editTextColor"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>